# fetcher-py

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
fetcher_py/: cli.py  component.py  downloader.py  fetcher.py  package.py
fetcher_py/protocol/: git.py  url.py
fetcher_py/registry/: _registry.py  brew.py  cargo.py  composer.py  cpan.py  gem.py  hackage.py  npm.py  nuget.py  oci.py  pypi.py
tests/: test_downloader.py  test_fetcher.py  test_integration.py  test_package.py
tests/registry/: test_cargo.py  test_composer.py  test_cpan.py  test_gem.py  test_hackage.py  test_npm.py  test_pypi.py  test_url.py
